--- a/css2.html
+++ b/css2.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS2</title>
     <style>
-        .centered{
+        body{
             text-align: center;
         }
-        .large{
+       header{
             font-size: large;
-        }
-        .medium{
-            font-size: medium;
-        }
-        .small{
-            font-size: small;
-        }
+       }
+       main{
+        font-size: medium;
+       }
+       footer{
+        font-size: small;
+       }
     </style>
 </head>
 <body >
-    <header class="centered"> John Harvard</header>
-    <main class="medium">Welcome to my Homepage</main>
-    <footer class="small" >Copyright &copy; John Harvard</footer>
+    <header > John Harvard</header>
+    <main >Welcome to my Homepage</main>
+    <footer >Copyright &copy; John Harvard</footer>
 </body>
 </html>
