--- a/css3.html
+++ b/css3.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS3</title>
+    <style>
+        body{
+            text-align: center;
+        }
+        .centered{
+            font-size: large;
+        }
+        .medium{
+            font-size: medium;
+        }
+        .small{
+            font-size: small;
+        }
+    </style>
 </head>
 <body>
-    
+    <header class="centered"> John Harvard</header>
+    <main class="medium" >Welcome to my Homepage</main>
+    <footer class="small">Copyright &copy; John Harvard</footer>
 </body>
 </html>
